# engineering-chronicle

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.Api  README.md
.github/workflows/: build-frontend.yml  publish-api.yml  run-crawler.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
crawler/: Cargo.toml
crawler/src/: blogs.rs  main.rs
docs/: index.html  ui-1422140ff7398a24.js  ui-1422140ff7398a24_bg.wasm  ui-860d43d84c178669.js  ui-860d43d84c178669_bg.wasm  ui-9dbfb380115bea47.js  ui-9dbfb380115bea47_bg.wasm  ui-a7179c0771256d2d.js  ui-a7179c0771256d2d_bg.wasm  ui-ac21c13b9f698281.js  ui-ac21c13b9f698281_bg.wasm  ui-d31fe5a159760b61.js  ui-d31fe5a159760b61_bg.wasm  ui-e247db25d93aaaac.js  ui-e247db25d93aaaac_bg.wasm  ui-fb6cf3829762cbbf.js  ui-fb6cf3829762cbbf_bg.wasm
shared/: Cargo.toml
shared/src/: blog_post.rs
src/: blogs.rs  feed.html  main.rs  templates.rs
ui/: Cargo.toml  index.html
ui/src/: main.rs  route.rs
ui/src/components/: mod.rs  nav.rs  overview.rs  post.rs  topic.rs  topic_nav_item.rs
ui/src/models/: blog_post.rs  mod.rs  search_term.rs
ui/src/pages/: mod.rs  overview.rs  topic.rs
ui/src/repositories/: blog_posts_repo.rs  mod.rs
ui/src/repositories/models/: blog_post.rs
