[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.29", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
mongodb = { version = "2.3.1", default-features = false, features = ["tokio-runtime"]}
anyhow = "1.0"
futures = "0.3"
rocket = {version = "0.5.0-rc.1", features = ["json"]}
shared = { path = "../shared" }