[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opml = "1.1.5"
tokio = { version = "1", features = ["full"] }
feed-rs = "1.2"
anyhow = "1.0.68"
reqwest = "0.11.14"
serde = "1.0.152"
dissolve = "0.2.2"
chrono = {version = "0.4.23", features = ["serde"]}
futures = "0.3.28"
stopwatch = "0.0.7"
colored = "2"
shared = { path = "../shared" }
serde_json = "1.0.108"