[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
yew-hooks = "0.2.0"
anyhow = "1.0.71"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
log = "0.4.19"
wasm-logger = "0.2.0"
chrono = "0.4.23"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlElement"
]